--- a/pom.xml
+++ b/pom.xml
@@ -60,9 +60,9 @@
 
   <dependencies>
     <dependency>
-      <groupId>com.destroystokyo.paper</groupId>
+      <groupId>io.papermc.paper</groupId>
       <artifactId>paper</artifactId>
-      <version>1.16.5-R0.1-SNAPSHOT</version>
+      <version>1.17-R0.1-SNAPSHOT</version>
       <exclusions>
         <exclusion>
           <groupId>io.papermc</groupId>
